--- a/cuidadopersonal.html
+++ b/cuidadopersonal.html
@@ -14,19 +14,19 @@
   </head>
   <body>
     <header class="navegacion_principal_header container-fluid">  
-      <nav class="navbar navbar-expand-lg" >
-        <div class="container-fluid ">
+      <nav class="navbar navbar-expand-lg row" >
+        <div class="contenedor_logo col-6 ">
           <img
-        class="navegacion_principal_header_logo  "
-        src="./img/LOGOMCCLYMONT.png"
+        class="navegacion_principal_header_logo"
+        src="./img/LOGOMCCLYMONT_zine.png"
         alt="LOGO MC CLYMONT"   
       />        
       </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler col-6" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
@@ -56,90 +56,129 @@
           height="100"
         />
       </div>
-    </header>
+          <!-- Fin Navegador -->
+        </header>
     <main class="cuidadopersonal_principal container-fluid">
-      <div class="row">
-      <section class="seccion_cabello col-md-4">
-        <div class="card card_cabello" style="width: 13rem;">
-          <img src="./img/cabello.jpg" class="card-img-top" alt="Cabello">
+      <div class="cuidadopersonal_contenedor row">
+      <section class="seccion_1 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1338763950-1024x1024.jpg" class="card-img-top" alt="Cabello">
           <div class="card-body">
             <h5 class="card-title">Cabello</h5>
-            <p class="card-text">Creá una rutina para tu cabello, con los mejores productos. Dejá que tu pelo hable por tí</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
           </div>
       </section>
-      <section class="seccion_higiene_personal col-md-4">
-        <div class="card" style="width: 13rem;">
-          <img src="./img/accesorios.jpg" class="card-img-top" alt="Higiene Personal">
-          <div class="card-body">
-            <h5 class="card-title">Accesorios</h5>
-            <p class="card-text">El estilo personal se muestra con la ropa, pero la perfecciona con los accesorios</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
       </section> 
-      <section class="seccion_bebes col-md-4">
-        <div class="card card_bebes" style="width: 13rem;">
-          <img src="./img/bebés.jpg" class="card-img-top" alt="Bebés">
-          <div class="card-body">
-            <h5 class="card-title">Bebés</h5>
-            <p class="card-text">Porque tu bebé merece solo lo mejor</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-      </section>
-      <section class="seccion_mamas col-md-4">
-        <div class="card" style="width: 13rem;">
+      <section class="seccion_1 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
           <img src="./img/mamás.jpg" class="card-img-top" alt="Higiene Personal">
           <div class="card-body">
             <h5 class="card-title">Mamás</h5>
-            <p class="card-text">Todo lo que necesitas, para acompañarte en este camino</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
           </div>
       </section>
-      <section class="seccion_alimentos_saludables col-md-4">
-        <div class="card" style="width: 13rem;">
-          <img src="./img/alimentos saludables.jpg" class="card-img-top" alt="Alimentos Saludables">
+      <section class="seccion_1 col-lg-2">
+        <div class="card  img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/bebés.jpg" class="card-img-top" alt="Bebés">
+          <div class="card-body">
+            <h5 class="card-title">Bebés</h5>
+          </div>
+      </section>
+      <section class="seccion_1 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1355873466-1024x1024.jpg" class="card-img-top_01" alt="Alimentos Saludables">
           <div class="card-body">
             <h5 class="card-title">Alimentos Saludables</h5>
-            <p class="card-text">La nutrición óptima, es la medicina del mañana</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
           </div>
-      </section>
-      <section class="seccion_higiene_bucal col-md-4">
-        <div class="card" style="width: 13rem;">
-          <img src="./img/bucal.jpg" class="card-img-top" alt="Higiene Bucal">
+      </section>  
+      <section class="seccion_1 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1339019088-1024x1024.jpg" class="card-img-top_01" alt="Higiene Bucal">
           <div class="card-body">
             <h5 class="card-title">Higiene Bucal</h5>
-            <p class="card-text">Cuidá tu boca con profesionales</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
           </div>
-      </section>      
+      </section> 
+      <section class="seccion_1 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1223970006-1024x1024.jpg" class="card-img-top_01" alt="Maquillaje">
+          <div class="card-body">
+            <h5 class="card-title">Maquillaje</h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1341797194-1024x1024.jpg" class="card-img-top_01" alt="Perfumes">
+          <div class="card-body">
+            <h5 class="card-title">Perfumeria</h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1363513308-1024x1024.jpg" class="card-img-top_01" alt="Accesorios">
+          <div class="card-body">
+            <h5 class="card-title">Accesorios</h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1360252583-1024x1024.jpg" class="card-img-top_01" alt="Protectores Solares">
+          <div class="card-body">
+            <h5 class="card-title">Protectores Solares</h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1338969634-1024x1024.jpg" class="card-img-top_01" alt="Cuidado Facial">
+          <div class="card-body">
+            <h5 class="card-title">Cuidado Facial</h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-680168804-1024x1024.jpg" class="card-img-top_01" alt="Electrónicos">
+          <div class="card-body">
+            <h5 class="card-title">Electrónicos </h5>
+          </div>
+      </section> 
+      <section class="seccion_2 col-lg-2">
+        <div class="card img-fluid img-thumbnail" style="width: 25rem;">
+          <img src="./img/istockphoto-1417679942-1024x1024.jpg" class="card-img-top_01" alt="Ofertas">
+          <div class="card-body">
+            <h5 class="card-title">Ofertas </h5>
+          </div>
+      </section>     
     </main>
       <!-- Inicio Footer -->
-      <footer class="footer_principal">
-        <div class="footer_farmacia">
+      <footer class="footer_principal container-fluid">
+        <div class="row">
+          <div class="footer_farmacia col-6 container-fluid">
+            <img
+            class="footer_principal_imagen_logo col-6"
+            src="./img/LOGOMCCLYMONT.png"
+            alt="LOGO MC CLYMONT"
+          />
+          <p class="footer_principal_texto_contacto col-6">
+            Salta 2398 Rosario Santa Fe Tel.0341-4392110</p>
+            <p class="footer_principal_texto_contacto col-6">
+            Horarios de Atención    
+            Lunes a Viernes : 08:30 a 13:00 16:30 a 20:30 
+            Sabados : 09:00 a 13:00.</p>
+            <p class="footer_principal_texto_contacto col-6">
+            Visitá nuestra Tienda Online</p>
+          </div>
+          <div class="footer_instagram col-6 container-fluid">
+            <img
+            class="fOOter_principal_imagen_redes col-6 "
+            src="./img//instagram_108043.png"
+            alt="logo redes sociales"
+          />
           <img
-          class="footer_principal_imagen_logo"
-          src="./img/LOGOMCCLYMONT.png"
-          alt="LOGO MC CLYMONT"
-        />
-        <p class="footer_principal_texto_contacto">
-          Salta 2398 Rosario Santa Fe Tel.0341-4392110
-        </p>
-        </div>
-        <div class="footer_instagram">
-          <img
-          class="fOOter_principal_imagen_redes "
-          src="./img//instagram_108043.png"
+          class="fOOter_principal_imagen_redes col-6"
+          src="./img/facebook_108044.png"
           alt="logo redes sociales"
         />
-        <img
-        class="fOOter_principal_imagen_redes"
-        src="./img/facebook_108044.png"
-        alt="logo redes sociales"
-      />
-        <p class="footer_principal_texto_instagram">Seguinos</p>
-        </div>        
-      </footer>
+          <p class="footer_principal_texto_instagram">Seguinos para conocer nuestras promociones vigentes</p>
+          </div>    
+        </div>
+        </footer>
       <!-- Fin Footer -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
