--- a/contactos.html
+++ b/contactos.html
@@ -13,19 +13,19 @@
   <body>
     <!-- !Inicio header + Navegador -->
     <header class="navegacion_principal_header container-fluid">  
-      <nav class="navbar navbar-expand-lg" >
-        <div class="container-fluid ">
+      <nav class="navbar navbar-expand-lg row" >
+        <div class="contenedor_logo col-6 ">
           <img
-        class="navegacion_principal_header_logo  "
-        src="./img/LOGOMCCLYMONT.png"
+        class="navegacion_principal_header_logo"
+        src="./img/LOGOMCCLYMONT_zine.png"
         alt="LOGO MC CLYMONT"   
       />        
       </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler col-6" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
@@ -58,70 +58,69 @@
     </header>
     <!-- !Fin header + Navegador -->
     <!-- !Inicio contenido contactos -->
+    <main>
     <section class="seccion_contactos container-fluid">
-      <article class="row ">
-        <div class="mb-3 col-md-6">
+      <div class="row">
+      <article class="formulario_contacto col-lg-5 ">
+        <div>
+        <div class="titulos name">
           <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
           <input type="" class="form-control" id="completar" placeholder="Nombre y Apellido Completo">
         </div>
-        <div class="mb-3 col-md-6">
+        <div class="titulos email">
           <label for="exampleFormControlInput1" class="form-label">Correo Electrónico</label>
           <input type="email" class="form-control" id="completar" placeholder="name@example.com">
         </div>
-        <div class="mb-3 col-md-6">
-          <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="Debe contener al menos 8 carateres">
-        </div>
-        <select class= "col-md-3" name="Modalidad de Compra" id="">
-          <option class="modalidad_compra " value="Modalidad de Compra">Modalidad de Compra</option>
-          <option class="modalidad_compra" value="obra social">Obra Social</option>
-          <option class="modalidad_compra" value="particular">Particular</option>
-          <option class="modalidad_compra" value="reintegros">Reintegros</option>
-        </select>   
-        <select class= "col-md-3" name="location" id="">
-          <option class="localidad" value="Localidad">Localidad</option>
-          <option class="localidad" value="rosario">Rosario</option>
-          <option class="localidad" value="funes">Funes</option>
-          <option class="localidad" value="pueblo esther">Pueblo Esther</option>
-        </select>
-        <div class="mb-3">
+        <div class="titulos message">
           <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <div class="mb-3 form-check">
+        <div class="form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Acepta Términos y Condicionest</label>
+          <label class="titulos_sub form-check-label" for="exampleCheck1">Me gustaría recibir notificaciones</label>
         </div>
-        <button type="submit" class="btn btn-primary col-md-3">Enviar</button>
-        </form>
+        <button type="submit" class="enviar btn btn-primary">Enviar</button>  
+        </div>
       </article>
-    </section>
+      <div>
+      <img class="imagen_contactanos col-lg-2" src="./img/Contactanos.png" alt="contactános">         
+      </div>
+      </div>   
+    </section>   
+    </main>
         <!-- Inicio Footer -->
-        <footer class="footer_principal">
-          <div class="footer_farmacia">
+        <footer class="footer_principal container-fluid">
+          <div class="row">
+            <div class="footer_farmacia col-6 container-fluid">
+              <img
+              class="footer_principal_imagen_logo col-6"
+              src="./img/LOGOMCCLYMONT.png"
+              alt="LOGO MC CLYMONT"
+            />
+            <p class="footer_principal_texto_contacto col-6">
+              Salta 2398 Rosario Santa Fe Tel.0341-4392110</p>
+              <p class="footer_principal_texto_contacto col-6">
+              Horarios de Atención    
+              Lunes a Viernes : 08:30 a 13:00 16:30 a 20:30 
+              Sabados : 09:00 a 13:00.</p>
+              <p class="footer_principal_texto_contacto col-6">
+              Visitá nuestra Tienda Online</p>
+            </div>
+            <div class="footer_instagram col-6 container-fluid">
+              <img
+              class="fOOter_principal_imagen_redes col-6 "
+              src="./img//instagram_108043.png"
+              alt="logo redes sociales"
+            />
             <img
-            class="footer_principal_imagen_logo"
-            src="./img/LOGOMCCLYMONT.png"
-            alt="LOGO MC CLYMONT"
-          />
-          <p class="footer_principal_texto_contacto">
-            Salta 2398 Rosario Santa Fe Tel.0341-4392110
-          </p>
-          </div>
-          <div class="footer_instagram">
-            <img
-            class="fOOter_principal_imagen_redes "
-            src="./img//instagram_108043.png"
+            class="fOOter_principal_imagen_redes col-6"
+            src="./img/facebook_108044.png"
             alt="logo redes sociales"
           />
-          <img
-          class="fOOter_principal_imagen_redes"
-          src="./img/facebook_108044.png"
-          alt="logo redes sociales"
-        />
-          <p class="footer_principal_texto_instagram">Seguinos</p>
-          </div>        
-        </footer>
+            <p class="footer_principal_texto_instagram">Seguinos para conocer nuestras promociones vigentes</p>
+            </div>    
+          </div>
+          </footer>
         <!-- Fin Footer -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
