--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- !Inicio header -->
+  <!-- !Inicio Head -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,69 +12,85 @@
     <!-- CSS only -->
     <title>Farmacia Mc Clymont, todo lo que necesitas, envíos sin cargo </title>
   </head>
+  <!-- Fin Head -->
   <body>
-    <header class="navegacion_principal_header container-fluid">  
-      <nav class="navbar navbar-expand-lg" >
-        <div class="container-fluid ">
-          <img
-        class="navegacion_principal_header_logo  "
-        src="./img/LOGOMCCLYMONT.png"
-        alt="LOGO MC CLYMONT"   
-      />        
+<!-- Inicio Header -->
+<header class="navegacion_principal_header container-fluid">  
+  <nav class="navbar navbar-expand-lg row navegacion_principal" >
+    <div class="contenedor_logo col-6 ">
+      <img
+    class="navegacion_principal_header_logo"
+    src="./img/LOGOMCCLYMONT_zine.png"
+    alt="LOGO MC CLYMONT"   
+  />        
+  </div>
+      <button class="navbar-toggler col-6" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active titulo_nav" href="./nosotros.html">NOSOTROS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active titulo_nav" href="./contactos.html">CONTACTO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active titulo_nav" href="./cuidadopersonal.html">
+              CUIDADO PERSONAL
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active titulo_nav " href="./medicamentos.html">MEDICAMENTOS</a>
+          </li>
       </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active titulo_nav" href="./nosotros.html">NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active titulo_nav" href="./contactos.html">CONTACTO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active titulo_nav" href="./cuidadopersonal.html">
-                  CUIDADO PERSONAL
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active titulo_nav " href="./medicamentos.html">MEDICAMENTOS</a>
-              </li>
-          </div>
-        </div>
-      </nav>
-      <div >
-        <img class="whatsapp"
-          src="./img/WhatsApp.svg.webp"
-          alt="Whatsapp"
-          width="100"
-          ;
-          height="100"
-        />
-      </div>
+    </div>
+  </nav>
+  <div >
+    <img class="whatsapp"
+      src="./img/WhatsApp.svg.webp"
+      alt="Whatsapp"
+      width="100"
+      ;
+      height="100"
+    />
+  </div>
       <!-- Fin Navegador -->
     </header>
-    <!-- Inicio Main Header -->
+<!-- Fin Header -->
+<!-- Inicio Main -->
     <main class="main_header_principal">
       <div class="main_header_contenedor">
-      <img
-        class="main_header_principal_imagen img-fluid"
-        src="./img/Imagen1.jpg"
-        alt="FARMACIA DE FONDO"
-      />
-    </main>
-    <!-- Fin Main Header -->
-    <!-- Inicio como trabajamos -->
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2000">
+              <img src="./img/istockphoto-1325914490-1024x1024.jpg" class="d-block w-100" alt="foto de farmacia">
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <img src="./img/istockphoto-1151980433-1024x1024.jpg" class="d-block w-100" alt="foto de farmacia">
+            </div>
+            <div class="carousel-item" data-bs-interval="4000">
+              <img src="./img/istockphoto-1343695700-1024x1024.png" class="d-block w-100" alt="foto de farmacia">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>      
     <section class="como_trabajamos container-fluid">
-      <div class="como_trabajamos_contenedor col-md-3 ">
-      <h1 class="como_trabajamos_titulo  text-center">¿Cómo trabajamos?</h1>
+      <div class="como_trabajamos_contenedor  ">
+      <h1 class="como_trabajamos_titulo col-lg-6">¿Cómo trabajamos?</h1>
       </div>
-      <div class="row justify-content-between">
-      <div class="pedido_contenedor  col-md-3">
+      <div class="row">
+      <div class="pedido_contenedor  col-lg-2">
         <h2 class="pedido_titulo">Hacé tu Pedido Online</h2>
         <img
           src="./img/Imagen04-removebg-preview.png"
@@ -86,7 +102,7 @@
           pedido será procesado y recibirás un mail de confirmación.
         </p>
       </div>      
-      <div class="delivery_contenedor col-md-3">
+      <div class="delivery_contenedor  col-lg-2">
         <h2 class="delivery_titulo">Delivery a tu casa</h2>
         <img
           src="./img/Imagen05-removebg-preview.png"
@@ -98,7 +114,7 @@
           necesitarás adjuntar imagen de la receta e indicar el medio de pago.
         </p>
       </div>
-      <div class="takeaway_contenedor  col-md-3">
+      <div class="takeaway_contenedor col-lg-2">
         <h2 class="takeaway_titulo">Take Away en la Farmacia</h2>
         <img
           src="./img/Imagen03-removebg.png"
@@ -110,57 +126,51 @@
           evitar demoras, te pediremos que nos adelantes la imagen de la receta.
         </p>
       </div>
-      </div>
-      <div class="row justify-content-end">
-      <div class="pedilo_ahora_contenedor col-md-3 ">
+      <div class="pedilo_ahora_contenedor  col-lg-2 ">
         <p class="pedilo_ahora ">Pedilo Ahora</p>
-      </div>   
-      </div>
-      <h2 class="promociones_titulo col-md-3  ">Promociones</h2>
-      <div class="promociones_imagenes row">
-        <img
-          src="./img/Promociones_02.jpg"
-          alt="promociones"
-          class="promociones_imagen01 col-md-6"
-        />
-        <img
-          src="./img/Promociones_01.jpg"
-          alt="promocionescantidad"
-          class="promociones_imagen_2x1 col-md-6"
-        />        
-      </div>        
+      </div>      
       </div>
     </section>
-    <!-- Fin Promociones -->
-    <!-- Inicio Footer -->
-    <footer class="footer_principal">
-        <div class="footer_farmacia">
+      </div>   
+  </main>
+<!-- Fin Main -->
+<!-- Inicio Footer -->
+    <footer class="footer_principal container-fluid">
+      <div class="row">
+        <div class="footer_farmacia col-6 container-fluid">
           <img
-          class="footer_principal_imagen_logo"
+          class="footer_principal_imagen_logo col-6"
           src="./img/LOGOMCCLYMONT.png"
           alt="LOGO MC CLYMONT"
         />
-        <p class="footer_principal_texto_contacto">
-          Salta 2398 Rosario Santa Fe Tel.0341-4392110
-        </p>
+        <p class="footer_principal_texto_contacto col-6">
+          Salta 2398 Rosario Santa Fe Tel.0341-4392110</p>
+          <p class="footer_principal_texto_contacto col-6">
+          Horarios de Atención    
+          Lunes a Viernes : 08:30 a 13:00 16:30 a 20:30 
+          Sabados : 09:00 a 13:00.</p>
+          <p class="footer_principal_texto_contacto col-6">
+          Visitá nuestra Tienda Online</p>
         </div>
-        <div class="footer_instagram">
+        <div class="footer_instagram col-6 container-fluid">
           <img
-          class="fOOter_principal_imagen_redes "
+          class="fOOter_principal_imagen_redes col-6 "
           src="./img//instagram_108043.png"
           alt="logo redes sociales"
         />
         <img
-        class="fOOter_principal_imagen_redes"
+        class="fOOter_principal_imagen_redes col-6"
         src="./img/facebook_108044.png"
         alt="logo redes sociales"
       />
-        <p class="footer_principal_texto_instagram">Seguinos</p>
-        </div>        
+        <p class="footer_principal_texto_instagram">Seguinos para conocer nuestras promociones vigentes</p>
+        </div>    
+      </div>
       </footer>
-    <!-- Fin Footer -->
-    <!-- JavaScript Bundle with Popper -->
+<!-- Fin Footer -->
+<!-- Inicio JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<!-- Fin JavaScript Bundle with Popper -->
   </body>
 </html>
