--- a/medicamentos.html
+++ b/medicamentos.html
@@ -12,20 +12,20 @@
     <title>Farmacia Mc Clymont, enviános tu reseta sin moverte de tu casa</title>
   </head>
   <body>
-    <header class="navegacion_principal_header container-fluid">  
-      <nav class="navbar navbar-expand-lg" >
-        <div class="container-fluid ">
+  <header class="navegacion_principal_header container-fluid">  
+      <nav class="navbar navbar-expand-lg row" >
+        <div class="contenedor_logo col-6 ">
           <img
-        class="navegacion_principal_header_logo  "
-        src="./img/LOGOMCCLYMONT.png"
+        class="navegacion_principal_header_logo"
+        src="./img/LOGOMCCLYMONT_zine.png"
         alt="LOGO MC CLYMONT"   
       />        
       </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler col-6" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active titulo_nav" aria-current="page" href="../index.html">INICIO</a>
               </li>
@@ -57,51 +57,58 @@
       </div>
           <!-- Fin Navegador -->
   </header>
-  <main class="medicamentos_principal container-fluid">>
+  <main class="medicamentos_principal container-fluid">
     <div class="row">
     <div class="obra_social col-md-4">
     <p class="medicamentos_titulo  col-md-4">Obra Social</p>
-    <img src="./img/Ob.Social.webp" class="img-fluid img-thumbnail imagen_medicamentos" alt="Obra Social">
+    <img src="./img/Ob.Social.webp" class="img-fluid img-thumbnail imagen_medicamentos_01" alt="Obra Social">
     <p class="descripcion_medicamentos col-md-6">Enviános la consulta de lo que necesitás y corroboramos la cobertura que tenés, de acuerdo a tu plan.</p>     
     </div>
     <div class="particulares col-md-4">
     <p class="medicamentos_titulo  col-md-4">Particular</p>
-    <img class="img-fluid img-thumbnail imagen_medicamentos" src="./img//Particular.webp" alt="Sin Obra Social"> 
+    <img class="img-fluid img-thumbnail imagen_medicamentos_02" src="./img//Particular.webp" alt="Sin Obra Social"> 
     <p class="descripcion_medicamentos col-md-6">En caso de no contar con obra social, atribuimos descuentos especiales, para poder ayudarte a contar con la medicación necesaaria.</p>      
     </div>  
     <div class="reintegros col-md-4">
       <p class="medicamentos_titulo col-md-4">Reintegros</p>
-      <img class="img-fluid img-thumbnail imagen_medicamentos" src="./img/istockphoto-508141100-1024x1024.jpg" alt="Reintegros"> 
+      <img class="img-fluid img-thumbnail imagen_medicamentos_03" src="./img/istockphoto-508141100-1024x1024.jpg" alt="Reintegros"> 
       <p class="descripcion_medicamentos col-md-6">En caso de no tener la reseta, se puede abonar y luego presentar bajo modalidad de reintegro.</p>      
       </div>
     </div>
   </main>
       <!-- Inicio Footer -->
-      <footer class="footer_principal">
-        <div class="footer_farmacia">
+      <footer class="footer_principal container-fluid">
+        <div class="row">
+          <div class="footer_farmacia col-6 container-fluid">
+            <img
+            class="footer_principal_imagen_logo col-6"
+            src="./img/LOGOMCCLYMONT.png"
+            alt="LOGO MC CLYMONT"
+          />
+          <p class="footer_principal_texto_contacto col-6">
+            Salta 2398 Rosario Santa Fe Tel.0341-4392110</p>
+            <p class="footer_principal_texto_contacto col-6">
+            Horarios de Atención    
+            Lunes a Viernes : 08:30 a 13:00 16:30 a 20:30 
+            Sabados : 09:00 a 13:00.</p>
+            <p class="footer_principal_texto_contacto col-6">
+            Visitá nuestra Tienda Online</p>
+          </div>
+          <div class="footer_instagram col-6 container-fluid">
+            <img
+            class="fOOter_principal_imagen_redes col-6 "
+            src="./img//instagram_108043.png"
+            alt="logo redes sociales"
+          />
           <img
-          class="footer_principal_imagen_logo"
-          src="./img/LOGOMCCLYMONT.png"
-          alt="LOGO MC CLYMONT"
-        />
-        <p class="footer_principal_texto_contacto">
-          Salta 2398 Rosario Santa Fe Tel.0341-4392110
-        </p>
-        </div>
-        <div class="footer_instagram">
-          <img
-          class="fOOter_principal_imagen_redes "
-          src="./img//instagram_108043.png"
+          class="fOOter_principal_imagen_redes col-6"
+          src="./img/facebook_108044.png"
           alt="logo redes sociales"
         />
-        <img
-        class="fOOter_principal_imagen_redes"
-        src="./img/facebook_108044.png"
-        alt="logo redes sociales"
-      />
-        <p class="footer_principal_texto_instagram">Seguinos</p>
-        </div>        
-      </footer>
+          <p class="footer_principal_texto_instagram">Seguinos para conocer nuestras promociones vigentes</p>
+          </div>    
+        </div>
+        </footer>
       <!-- Fin Footer -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
